# avo_vbvis

./: .gitignore  PROJECT.md  README.md  pixi.toml  pyproject.toml
src/avogadro_vbvis/: Avogadro_Plugin-Spec.md  geometry.py  io.py  main.py  orbitals.py
